--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -313,6 +313,10 @@
     "    return\n",
     "deleteContact('anil')\n",
     "deleteContact('danesh')\n",
+    "#Regular expressions\n",
+    "  #To Validate the Indian Number\n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -373,6 +377,56 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def twoDigitmatching(n):\n",
+    "    pattern = '^[0-9]{2}$'\n",
+    "    n = str(n)\n",
+    "    if re.match(pattern,n):\n",
+    "        return True\n",
+    "    return False\n",
+    "print(twoDigitmatching(12))\n",
+    "print(twoDigitmatching(123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def validateUsername(s):\n",
+    "    pattern = '^[a-zA-Z]{5,12}$'\n",
+    "    if re.match(pattern,s):\n",
+    "         return True\n",
+    "    return False\n",
+    "print(validateUsername('anikumar'))\n",
+    "print(validateUsername('anil'))"
+   ]
   },
   {
    "cell_type": "code",
