--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -142,10 +142,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findLineCount(filename):\n",
+    "    with open(filename,'r') as f:\n",
+    "        if f.mode == 'r':\n",
+    "            a = f.read()\n",
+    "            li = a.split('\\n')\n",
+    "    return len(li)\n",
+    "findLineCount('data.txt')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def caseCount(filename):\n",
+    "    cntUpper = 0\n",
+    "    cntLower = 0\n",
+    "    cntDigit = 0\n",
+    "    with open(filename,'r') as f:\n",
+    "        if f.mode =='r':\n",
+    "            a = f.read()\n",
+    "            li = list(a)\n",
+    "    for i in range(len(li)):\n",
+    "        if ord(li[i]) >= 65 and ord(li[i])\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
